--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -2,15 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:card_view="http://schemas.android.com/tools"
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
     android:layout_marginTop="4dp"
     android:layout_marginBottom="4dp"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?selectableItemBackground"
-    card_view:cardElevation="1dp">
+    android:foreground="?selectableItemBackground">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,11 +18,9 @@
         <!--suppress AndroidLintContentDescription -->
         <com.example.xyzreader.ui.DynamicHeightNetworkImageView
             android:id="@+id/thumbnail"
-            android:layout_width="match_parent"
+            android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@color/photo_placeholder"
-            android:scaleType="centerCrop"
-            android:adjustViewBounds="true"/>
+            android:background="@color/photo_placeholder" />
 
         <TextView
             android:id="@+id/article_title"
@@ -35,10 +31,9 @@
             android:paddingTop="16dp"
             android:paddingRight="16dp"
             android:paddingBottom="4dp"
-            android:textColor="@android:color/black"
+            android:textColor="@color/ltgray"
             android:ellipsize="end"
-            android:maxLines="4"
-            android:layout_gravity="clip_horizontal"/>
+            android:maxLines="4" />
 
         <TextView
             android:id="@+id/article_subtitle"
@@ -48,10 +43,9 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:paddingBottom="16dp"
-            android:textColor="#757575"
+            android:textColor="#6000"
             android:maxLines="2"
-            android:ellipsize="end"
-            android:layout_gravity="clip_horizontal"/>
+            android:ellipsize="end" />
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
