--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="theme_accent">#FFAB40</color>
     <color name="ltgray">#BDBDBD</color>
     <color name="dark_grey">#757575</color>
+    <color name="article_text_color">#757575</color>
 </resources>
