--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -8,5 +8,8 @@
     <dimen name="fab_press_translation_z">6dp</dimen>
     <dimen name="fab_margin">24dp</dimen>
     <dimen name="dimen_16">16dp</dimen>
+    <dimen name="dynamic_iv_height">100dp</dimen>
+    <dimen name="cardview_margin">4dp</dimen>
+    <dimen name="padding_16">16dp</dimen>
 
 </resources>
