--- a/XYZReader/src/main/res/layout/list_item_article.xml
+++ b/XYZReader/src/main/res/layout/list_item_article.xml
@@ -3,18 +3,17 @@
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/cardview_margin"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?selectableItemBackground"
-    card_view:cardElevation="1dp">
+    card_view:cardElevation="3dp"
+    android:layout_margin="@dimen/cardview_margin">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!--suppress AndroidLintContentDescription -->
         <com.example.xyzreader.ui.DynamicHeightNetworkImageView
             android:id="@+id/thumbnail"
             android:layout_width="match_parent"
@@ -46,8 +45,8 @@
             android:paddingRight="@dimen/padding_16"
             android:paddingBottom="@dimen/padding_16"
             android:textColor="@color/article_text_color"
-            android:maxLines="2"
             android:ellipsize="end"
+            android:maxLines="2"
             android:layout_gravity="clip_horizontal"/>
     </LinearLayout>
 
