--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="ltgray">#BDBDBD</color>
     <color name="dark_grey">#757575</color>
     <color name="article_text_color">#757575</color>
+    <color name="white">#ffffff</color>
 </resources>
